--- a/index.html
+++ b/index.html
@@ -1,1 +1,12 @@
-<h1>Hello World</h1>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>My Submissions to the FrontendMentor</title>
+</head>
+<body>
+    Here you will find my submissions to the frontend mentor challenes I took.
+</body>
+</html>
