link to qr code challenge

--- a/index.html
+++ b/index.html
@@ -7,6 +7,12 @@
     <title>My Submissions to the FrontendMentor</title>
 </head>
 <body>
-    Here you will find my submissions to the frontend mentor challenes I took.
+    Here you will find my submissions to the frontend mentor challenes I took.<br>
+    Take a look:
+    <ul>
+        <li>
+            <a href="/challenges/qr-code-component-main/">QR Code Component</a>
+        </li>
+    </ul>
 </body>
 </html>
