move challenge out

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     Take a look:
     <ul>
         <li>
-            <a href="challenges/qr-code-component-main/">QR Code Component</a>
+            <a href="qr-code-component/">QR Code Component</a>
         </li>
     </ul>
 </body>
