add transition to btn-link color too

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
             text-decoration: none;
             padding: 0.6rem 1rem;
             border-radius: 0.2rem;
-            transition-property: box-shadow;
+            transition-property: box-shadow,color;
             transition-duration: 300ms;
         }
 
