--- a/qr-code-component/index.html
+++ b/qr-code-component/index.html
@@ -111,7 +111,7 @@
   
   <footer class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Vaibhav Shete</a>.
+    Coded by <a href="https://github.com/vaibhavbshete">Vaibhav Shete</a>.
   </footer>
 </body>
 </html>
