add expenses chart link to index

--- a/index.html
+++ b/index.html
@@ -118,6 +118,9 @@
             <li>
                 <a href="qr-code-component/">QR Code Component</a>
             </li>
+            <li>
+                <a href="expenses-chart-component/">Expenses Chart Component</a>
+            </li>
         </ul>
 
         <a href="https://github.com/vaibhavbshete/frontend-mentor-challenges" class="btn-link-dark">
