--- a/expenses-chart-component/index.html
+++ b/expenses-chart-component/index.html
@@ -119,7 +119,7 @@
 
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="https://github.com/vaibhavbshete">Vaibhav Shete</a>.
+    Coded by <a href="https://vaibhavbshete.github.io/frontend-mentor-challenges/">Vaibhav Shete</a>.
   </div>
   <script src="assets/script.js">
     
