relative links in expenses chart

--- a/expenses-chart-component/index.html
+++ b/expenses-chart-component/index.html
@@ -12,7 +12,7 @@
   <style>
     
   </style>
-<link rel="stylesheet" href="assets/style.css">
+<link rel="stylesheet" href="./assets/style.css">
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;700&display=swap" rel="stylesheet">
@@ -121,7 +121,7 @@
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="https://vaibhavbshete.github.io/frontend-mentor-challenges/">Vaibhav Shete</a>.
   </div>
-  <script src="assets/script.js">
+  <script src="./assets/script.js">
     
   </script>
 </body>
