classes for ref images

--- a/expenses-chart-component/index.html
+++ b/expenses-chart-component/index.html
@@ -19,8 +19,8 @@
 </head>
 <body>
   <div style="position: relative; opacity: 50%;z-index: 20;">
-    <!-- <img src="./design/desktop-design.jpg" style="width: 1440px;height:1024px;position:absolute;top:0;left:0" alt=""> -->
-    <!-- <img src="./design/mobile-design.jpg" style="width: 375px;height:667px;position:absolute;top:0;left:0" alt=""> -->
+    <img class="refimgs desktop" src="./design/desktop-design.jpg" alt="">
+    <img class="refimgs mobile" src="./design/mobile-design.jpg" alt="">
   </div>
   <div class="centering-flex">
     <main class="spend-card-wrap">
