comment out the ref images

--- a/expenses-chart-component/index.html
+++ b/expenses-chart-component/index.html
@@ -18,10 +18,10 @@
 <link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
-  <div style="position: relative; opacity: 50%;z-index: 20;">
+  <!-- <div style="position: relative; opacity: 50%;z-index: 20;">
     <img class="refimgs desktop" src="./design/desktop-design.jpg" alt="">
     <img class="refimgs mobile" src="./design/mobile-design.jpg" alt="">
-  </div>
+  </div> -->
   <div class="centering-flex">
     <main class="spend-card-wrap">
       <section class="balance-card">
