--- a/expenses-chart-component/index.html
+++ b/expenses-chart-component/index.html
@@ -27,7 +27,7 @@
       <section class="balance-card">
         <img src="./images/logo.svg" alt="" class="company-logo">
         <div class="balance-text">
-          My balance
+          <h2 class="balance-text-heading">My balance</h2>
           <div class="amount">$921.48</div>
         </div>
       </section>
@@ -104,7 +104,7 @@
         </div>
       <footer class="total-footer">
         <section class="total-wrap">
-          Total this month
+          <h3>Total this month</h3>
           <div class="amount">$478.33</div>
         </section>
         <section class="growth-wrap">
@@ -117,10 +117,10 @@
     </main>
   </div>
 
-  <div class="attribution">
+  <footer class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="https://vaibhavbshete.github.io/frontend-mentor-challenges/">Vaibhav Shete</a>.
-  </div>
+  </footer>
   <script src="./assets/script.js">
     
   </script>
