add interactive card details solution

--- a/index.html
+++ b/index.html
@@ -121,6 +121,9 @@
             <li>
                 <a href="expenses-chart-component/">Expenses Chart Component</a>
             </li>
+            <li>
+                <a href="interactive-card-details-form/">Interactive Card Details Form</a>
+            </li>
         </ul>
 
         <a href="https://github.com/vaibhavbshete/frontend-mentor-challenges" class="btn-link-dark">
