--- a/interactive-card-details-form/index.html
+++ b/interactive-card-details-form/index.html
@@ -150,10 +150,10 @@
 
 
 
-  <!-- <aside class="attribution fixed top-0 right-0 m-4">
+   <aside class="attribution fixed top-0 right-0 m-4">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="https://vaibhavbshete.github.io">Vaibhav Shete</a>.
-  </aside> -->
+    Coded by <a href="https://vaibhavbshete.github.io/frontendmentor-challenges/">Vaibhav Shete</a>.
+  </aside>
   <script src="public/main.js"></script>
 </body>
 </html>
