font weights in textboxes

--- a/interactive-card-details-form/index.html
+++ b/interactive-card-details-form/index.html
@@ -91,7 +91,7 @@
       <label class=" block ">
         <span class="my-2 uppercase text-sm tracking-wider block">Cardholder Name</span>
         <span class="input-gradient-wrapper">
-          <input class="active-input"
+          <input class="active-inpu"
            v-model="card.name.value"
            type="text" maxlength="32" autocomplete="cc-name"
            placeholder="e.g. Jane Appleseed"
