revert text Types

--- a/interactive-card-details-form/index.html
+++ b/interactive-card-details-form/index.html
@@ -111,7 +111,7 @@
            :class="card.number.value==''?'':'uppercase'"
            @input="event=>{modInputWSpaces(event);validate(event.target)}"
            :value="card.number.value"
-           type="number" inputmode="numeric" autocomplete="cc-number"
+           type="text" inputmode="numeric" autocomplete="cc-number"
            placeholder="e.g. 1234 5678 9123 0000"
            data-validation-function="number"
            data-validation-field="card.number"
@@ -130,7 +130,7 @@
               <input class="active-input"
                name="exp-Month"
                id="monthInput"
-               maxlength="2" type="number" inputmode="numeric" autocomplete="cc-exp-month" 
+               maxlength="2" type="text" inputmode="numeric" autocomplete="cc-exp-month" 
                placeholder="MM" pattern="0[1-9]|1[0-2]" title="MM"
                :value="card.expDate.month.value"
                data-validation-function="expDateMonth"
@@ -142,7 +142,7 @@
               <input class="active-input"
                name="expDateYear"
                id="yearInput"
-               maxlength="2" type="number" 
+               maxlength="2" type="text" 
                inputmode="numeric" 
                :value="card.expDate.year.value"
                data-validation-function="expDateYear"
@@ -161,7 +161,7 @@
             <input class="active-input"
              name="cvc"
              maxlength="3"
-             type="number" inputmode="numeric"
+             type="text" inputmode="numeric"
              autocomplete="cc-csc" placeholder="e.g. 123"
              data-validation-function="cvc"
              data-validation-field="card.cvc"
