--- a/notifications-panel/index.htm
+++ b/notifications-panel/index.htm
@@ -1,1 +1,31 @@
-<!doctype html><html lang="en"><head><meta charset="UTF-8"><meta http-equiv="X-UA-Compatible" content="IE=edge"><meta name="viewport" content="width=device-width,initial-scale=1"><title>Document</title><script defer="defer" src="dist/main.js"></script><link href="dist/main.a37af00e1122a4f19790.css" rel="stylesheet"></head><body><div id="app">{{message}}<hello-world></hello-world></div></body><script src="./dist/main.js"></script></html>
+<!-- @format -->
+
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width,initial-scale=1" />
+    <title>
+        Hello
+    </title>
+    <link rel="icon" href="dist/favicon-32x32.png" />
+    <script defer="defer" src="dist/main.js"></script>
+</head>
+
+<body>
+    <h1>
+        but
+        first,
+    </h1>
+    <main id="app">
+        {{message}}
+        {{count}}
+        sd
+        <hello-world></hello-world>
+    </main>
+    <!-- <script src="./dist/main.js"></script> -->
+</body>
+
+</html>
