--- a/notifications-panel/src/index.htm
+++ b/notifications-panel/src/index.htm
@@ -4,13 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title><%= htmlWebpackPlugin.options.title %></title>
 </head>
 <body>
-    <div id="app">
-        {{message}}
+    <h1>but first,</h1>
+    <main id="app">
+        {{message}} {{count}}
         <hello-world></hello-world>
-    </div>
+    </main>
+    <!-- <script src="./dist/main.js"></script> -->
 </body>
-<script src="./dist/main.js"></script>
 </html>
