--- a/notifications-panel/index.htm
+++ b/notifications-panel/index.htm
@@ -1,31 +1,2 @@
-<!-- @format -->
-
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width,initial-scale=1" />
-    <title>
-        Hello
-    </title>
-    <link rel="icon" href="dist/favicon-32x32.png" />
-    <script defer="defer" src="dist/main.js"></script>
-</head>
-
-<body>
-    <h1>
-        but
-        first,
-    </h1>
-    <main id="app">
-        {{message}}
-        {{count}}
-        sd
-        <hello-world></hello-world>
-    </main>
-    <!-- <script src="./dist/main.js"></script> -->
-</body>
-
-</html>
+<!doctype html><html lang="en"><head><meta charset="UTF-8"><meta http-equiv="X-UA-Compatible" content="IE=edge"><meta name="viewport" content="width=device-width,initial-scale=1"><link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png"><title>Frontend Mentor | Notifications page</title><style>.attribution { font-size: 11px; text-align: center; }
+    .attribution a { color: hsl(228, 45%, 44%); }</style><link rel="icon" href="dist/favicon-32x32.png?d4a2b3e99e32e7a5e4b5"><script defer="defer" src="dist/main.js?d4a2b3e99e32e7a5e4b5"></script><link href="dist/main.css?d4a2b3e99e32e7a5e4b5" rel="stylesheet"></head><body>Notifications 3 Mark all as read Mark Webber reacted to your recent post My first tournament today! 1m ago Angela Gray followed you 5m ago Jacob Thompson has joined your group Chess Club 1 day ago Rizky Hasanuddin sent you a private message 5 days ago Hello, thanks for setting up the Chess Club. I've been a member for a few weeks now and I'm already having lots of fun and improving my game. Kimberly Smith commented on your picture 1 week ago Nathan Peterson reacted to your recent post 5 end-game strategies to increase your win rate 2 weeks ago Anna Kim left the group Chess Club 2 weeks ago<div class="attribution">Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. Coded by <a href="#">Your Name Here</a>.</div></body></html>
