add notificatins-panel to index

--- a/index.html
+++ b/index.html
@@ -124,6 +124,9 @@
             <li>
                 <a href="interactive-card-details-form/">Interactive Card Details Form</a>
             </li>
+            <li>
+                <a href="notifications-panel/">Notifications Page</a>
+            </li>
         </ul>
 
         <a href="https://github.com/vaibhavbshete/frontend-mentor-challenges" class="btn-link-dark">
