removing error notice keeping it commented in case needed later

--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
             <small>my submissions to</small><br>
             <span class="font-bold">Frontend Mentor</span>
         </h1>
-        <p class="error">Currently facing issuses. Hope to resolve or deploy to a different service soon.</p>
+        <!-- <p class="error">Currently facing issuses. Hope to resolve or deploy to a different service soon.</p> -->
         <p>Here you will find my submissions to the frontend mentor challegnes I took.</p>
         <p>Take a look:</p>
         <ul>
