--- a/index.html
+++ b/index.html
@@ -154,6 +154,7 @@
 
         <a href="https://github.com/vaibhavbshete/frontend-mentor-challenges" class="btn-link-dark">
             <img src="GitHub-Mark-Light-32px.png" alt="github cat">
+            <img src="/../../../../primer/octicons/blob/main/icons/mark-githib-16.svg" alt="gh-mark">
             Github Repo &rarr;
         </a>
     </div>
