--- a/multi-step-form/index.html
+++ b/multi-step-form/index.html
@@ -33,7 +33,7 @@
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
       Coded by <a href="https://vaibhavbshete.github.io/frontend-mentor-challenges/">Vaibhav Shete</a>.
     </div>
-    <script type="module" src="/form.js"></script>
+    <script type="module" src="built-assets/form.js"></script>
 
 </body>
 </html>
