--- a/index.html
+++ b/index.html
@@ -150,6 +150,9 @@
             <li>
                 <a href="notifications-panel/">Notifications Page</a>
             </li>
+            <li>
+                <a href="multi-step-form/">Notifications Page</a>
+            </li>
         </ul>
 
         <a href="https://github.com/vaibhavbshete/frontend-mentor-challenges" class="btn-link-dark">
