fix link text in list page

--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
                 <a href="notifications-panel/">Notifications Page</a>
             </li>
             <li>
-                <a href="multi-step-form/">Notifications Page</a>
+                <a href="multi-step-form/">Multi-step Form</a>
             </li>
         </ul>
 
