--- a/multi-step-form/index.html
+++ b/multi-step-form/index.html
@@ -27,12 +27,12 @@
 <body>
 <!-- <div id="like_button_container">aside</div> -->
 
-    <div id="app"></div>
+    <main id="app"></main>
 
-    <div class="attribution">
+    <aside class="attribution">
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
       Coded by <a href="https://vaibhavbshete.github.io/frontend-mentor-challenges/">Vaibhav Shete</a>.
-    </div>
+    </aside>
     <script type="module" src="built-assets/form.js"></script>
 
 </body>
